--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,4 @@
-.App {
+/* .App {
   text-align: center;
 }
 
@@ -26,8 +26,17 @@
 
 .App-link {
   color: #61dafb;
+} */
+
+@font-face {
+  font-family: BlahaFont;
+  src: url(./fonts/Blahafont-Regular.ttf);
 }
 
+* {
+  font-family: BlahaFont;
+}
+/* 
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
@@ -35,4 +44,4 @@
   to {
     transform: rotate(360deg);
   }
-}
+} */
