disable header and change it to download butoon

--- a/src/components/Customization/Custom.css
+++ b/src/components/Customization/Custom.css
@@ -2,6 +2,17 @@ body {
     background: lightgrey;
 }
 
+.buttonDiv {
+    padding: 10px;
+    text-align: right;
+}
+
+.buttonDiv button{
+    padding: 10px;
+    background: red;
+    color: yellow;
+}
+
 /* @font-face {
     font-family: BlahaFont;
     src: url(../../fonts/Blahafont-Regular.ttf);
